--- a/rootdir/etc/init.qcom-common.rc
+++ b/rootdir/etc/init.qcom-common.rc
@@ -384,7 +384,7 @@ on property:service.bootanim.exit=1
     write /dev/cpuctl/cpu.notify_on_migrate 1
 
 on property:init.svc.bootanim=stopped
-    # Switch to CFQ and balanced mode after boot for better UX
+    # Switch to BFQ and balanced mode after boot for better UX
     write /sys/class/devfreq/qcom,cpubw.40/governor "cpubw_hwmon"
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "interactive"
@@ -405,7 +405,7 @@ on property:init.svc.bootanim=stopped
     write /sys/module/cpu_boost/parameters/input_boost_ms 40
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
 
-    write /sys/block/mmcblk0/queue/scheduler cfq
+    write /sys/block/mmcblk0/queue/scheduler bfq
     start mpdecision
 
 on property:init.svc.bootanim=running
